# mandelbrot_set

./: CMakeLists.txt  README.md  main.cpp
assets/: simple-shader.fs  simple-shader.vs
